[project]
name = "iscc-bio"
version = "0.1.0"
description = "BioCodes - ISCC Processing for BioImaging Data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "iscc-core>=1.2.2",
    "iscc-sum>=0.1.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "click>=8.0.0",
    "zeroc-ice @ https://github.com/glencoesoftware/zeroc-ice-py-macos-universal2/releases/download/20240131/zeroc_ice-3.6.5-cp312-cp312-macosx_11_0_universal2.whl ; sys_platform == 'darwin'",
    "zeroc-ice @ https://github.com/glencoesoftware/zeroc-ice-py-win-x86_64/releases/download/20240325/zeroc_ice-3.6.5-cp312-cp312-win_amd64.whl ; sys_platform == 'win32'",
    "zeroc-ice @ https://github.com/glencoesoftware/zeroc-ice-py-linux-x86_64/releases/download/20240202/zeroc_ice-3.6.5-cp312-cp312-manylinux_2_28_x86_64.whl ; sys_platform == 'linux'",
    "omero-py>=5.21.1",
    "ome-zarr>=0.12.2",
    "bioio>=3.0.0",
    "bioio-bioformats>=1.3.0",  # Install bioformats FIRST so native readers get higher priority
    "bioio-czi>=2.4.0",
    "bioio-ome-tiff>=1.4.0",
    "bioio-ome-zarr>=2.3.0",
    "bioio-dv>=1.2.0",
    "bioio-imageio>=1.3.0",
    "bioio-lif>=1.4.1",
    "bioio-nd2>=1.5.0",
    "bioio-tifffile>=1.3.0",
    "bioio-tiff-glob>=1.2.0",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "poethepoet>=0.25.0",
    "pre-commit>=2.20.0",
    "mkdocs-material>=9.6.14",
    "mkdocs-glightbox>=0.4.0",
    "mdformat>=0.7.22",
    "mdformat-mkdocs>=4.3.0",
    "mdformat-footnote>=0.1.1",
    "mdformat-tables>=1.0.0",
    "mdformat-gfm-alerts>=2.0.0",
]

[project.scripts]
iscc-bio = "iscc_bio.cli:cli"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["iscc_bio"]

[tool.uv]
package = true

[tool.ruff]
# Support for PEP 484 type comments
extend-exclude = []

[tool.ruff.lint]
# Allow imports that are only used in type comments
# See: https://docs.astral.sh/ruff/settings/#lint_typing-modules
typing-modules = ["typing"]

[tool.ruff.lint.per-file-ignores]
# Files using type comments need to keep their typing imports
"**/imagewalk/*.py" = ["F401"]

[tool.poe.tasks]
# Documentation tasks
docs-build = { script = "scripts.build_docs:main", help = "Copy README.md to /docs" }
# Fromatting
format-md = { shell = "uv run mdformat --end-of-line lf --wrap 112 --number *.md docs", help = "Format markdown files" }
format-code = { shell = "uv run ruff format .", help = "Format code files" }
format = { sequence = ["format-code", "format-md"], help = "Format all files" }
# All-in-one command
all = ["docs-build", "format"]
